# josue-rodriguez.github.io

./: .gitignore  README.md  _make_symlink.r  _quarto.yml  about.qmd  config.toml  coverage_data2.R  index.qmd  posts.qmd  pyproject.toml  styles.scss
_site/: about.html  index.html  search.json
config/_default/: menus.toml  params.toml
content/home/: about.md  accomplishments.md  hero.md
content/post/: model-selection-bias.Rmd  model-selection-bias.html  tutorial-bayesian-testing.html
docs/: about.html  index.html  listings.json  posts.html  search.json
posts/: _metadata.yml  model-selection-bias.Rmd  tutorial-bayesian-testing.Rmd
posts/2020-6-18-model-selection-bias/: model-selection-bias.Rmd
posts/2024-08-test/: index.qmd
posts/2024-09-15-simple-linear-regression/: index.qmd
posts/2024-11-16-matrix-ols/: index.qmd
posts/2024-11-27-confidence-interval-alt-definition/: index.qmd  refs.bib
posts/2025-03-30-prediction-intervals/: index.qmd
posts/2026-03-30-recall-precision-tradeoff/: index.qmd
posts/2026-03-31-base-rates-precision/: index.qmd
posts/2026-03-31-recall-precision-tradeoff/: index.qmd  review_notes.md
public/: 404.html  index.html  index.json  index.webmanifest  index.xml  sitemap.xml
public/authors/: index.html  index.xml
public/categories/: index.html  index.xml
public/courses/: index.html  index.xml
public/css/: academic.min.41f7693c653e1365c01b4222f0af3f03.css  academic.min.7ad7088f6823d5f270888524da55d75d.css  academic.min.b7deec7b33ad9732641a9c3c0e6280c2.css  academic.min.e2e19d53d5ed34b0ff0f9146dd21e858.css
(+259 files in other folders)
